@@ -21,7 +21,6 @@
 #include <sys/param.h>
 #include <stdarg.h>
 
-#include "config.h"
 #include "srcp-gl.h"
 #include "srcp-ga.h"
 
